--- a/backend/package.json
+++ b/backend/package.json
@@ -22,5 +22,12 @@
     "nodemailer": "^7.0.5",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0"
-  }
+  },
+  "devDependencies": {
+    "jest": "^30.0.5",
+    "supertest": "^7.1.4"
+  },
+  "scripts": {
+  "test": "jest"
+}
 }
