--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "echo \"No tests configured yet. Skipping test run.\" && exit 0",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "dependencies": {
@@ -27,13 +27,29 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "babel-jest": "^30.0.5",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0"
+    "globals": "^16.3.0",
+    "jest": "^27.5.1"
   },
+
+  "jest": {
+  "setupFilesAfterEnv": ["<rootDir>/src/setupTests.js"],
+  "testEnvironment": "jsdom",
+  "transform": {
+    "^.+\\.[jt]sx?$": "babel-jest"
+  },
+  "moduleNameMapper": {
+    "\\.(css|less|scss|sass)$": "identity-obj-proxy",
+     "\\.(jpg|jpeg|png|gif|webp|svg)$": "<rootDir>/mocks/fileMock.js"
+  }
+},
   "browserslist": {
     "production": [
       ">0.2%",
@@ -46,5 +62,6 @@
       "last 1 safari version"
     ]
   },
+  
   "proxy": "http://localhost:5000"
 }
