--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"No tests configured yet. Skipping test run.\" && exit 0"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -24,10 +21,18 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "cross-env": "^10.0.0",
     "jest": "^30.0.5",
     "supertest": "^7.1.4"
   },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.js"
+    ],
+    "forceExit": true,
+    "detectOpenHandles": true
+  },
   "scripts": {
-  "test": "jest"
-}
+    "test": "cross-env NODE_ENV=test jest"
+  }
 }
